--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "md-2-json": "^1.0.6",
     "next": "10.1.3",
+    "node-sass": "^5.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^1.5.2",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-markdown": "^6.0.1",
+    "remark-gfm": "^1.0.0"
   }
 }
